release 1.5